# nlf_contract_renew_multi_agents

./: .gitignore  README.md  eda.ipynb  evaluation.py  pyproject.toml  run.sh
examples/: contract_recommendation.md  media_strategy.md
knowledge/: agent_ai_process_data.ipynb  contract_details.csv  prepare_data.py  temp_knowledge.csv  wr_stats_for_ai_negotiator.csv
knowledge/agent_input/: aj_brown.xml  amon-ra_st_brown.xml  brandon_powell.xml  calvin_ridley.xml  ceedee_lamb.xml  curtis_samuel.xml  darnell_mooney.xml  deonte_harty.xml  devonta_smith.xml  dj_moore.xml  jauan_jennings.xml  jerry_jeudy.xml  justin_jefferson.xml  mike_evans.xml
knowledge/raw_data/: nfl_training_data_2009_2024_v2.csv  wr_2024_non_rookies.csv
output/: contract_recommendation.csv
output/0/: contract_recommendation.md  crew.txt  media_strategy.md
output/1/: contract_recommendation.md  crew.txt  media_strategy.md
output/11/: contract_recommendation.md  crew.txt  media_strategy.md
output/12/: contract_recommendation.md  crew.txt  media_strategy.md
output/13/: contract_recommendation.md  crew.txt  media_strategy.md
output/14/: contract_recommendation.md  crew.txt  media_strategy.md
output/15/: contract_recommendation.md  crew.txt  media_strategy.md
output/19/: contract_recommendation.md  crew.txt  media_strategy.md
output/2/: contract_recommendation.md  crew.txt  media_strategy.md
output/4/: contract_recommendation.md  crew.txt  media_strategy.md
output/5/: contract_recommendation.md  crew.txt  media_strategy.md
output/6/: crew.txt  (+2 more)
paper/: nfl_contract_workflow.drawio
(+10 files in other folders)
