[project]
name = "nfl_contract"
version = "0.1.0"
description = "nfl_contract using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.67.0",
    "crewai[tools]>=0.186.1,<1.0.0",
    "ipykernel>=6.30.1",
    "xmltodict>=1.0.2",
]

[project.scripts]
nfl_contract = "nfl_contract.main:run"
run_crew = "nfl_contract.main:run"
train = "nfl_contract.main:train"
replay = "nfl_contract.main:replay"
test = "nfl_contract.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
